# PocketBot_Enterprise_X

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  estrutura.txt  pyproject.toml  requirements.txt  smoke_test.py
.github/workflows/: ci.yml  docker.yml
config/: app.yaml
docs/architecture/: v1.3-audit.md
docs/releases/: v1.0.0-enterprise.md  v1.6.0.md  v1.9.0.md
scripts/: test_config.py
src/pocketbot/: __init__.py
src/pocketbot/__init__.py/: Novo Documento de Texto.txt
src/pocketbot/application/: requests.py
src/pocketbot/bootstrap/: __init__.py  application.py  application_service.py  builder.py  indicator_loader.py  market.py  service_registration.py
src/pocketbot/config/: __init__.py  loader.py  service.py
src/pocketbot/confluence/: engine.py  scorer.py  validator.py  weight.py
src/pocketbot/core/: __init__.py  constants.py  enums.py  exceptions.py  logger.py  paths.py  result.py  settings.py  types.py
tests/: test_indicator_pipeline.py
tests/bootstrap/: test_application_composition.py  test_application_isolation.py
tests/config/: test_config_service_cache_isolation.py  test_config_service_isolation.py
tests/decision/: test_decision_failure_scenarios.py  test_decision_strategy_integration.py
tests/events/: test_event_bus.py  test_event_bus_isolation.py  test_event_isolation.py  test_event_payload_isolation.py
tests/execution/: test_execution_failure_scenarios.py
tests/indicators/: test_indicator_registry_isolation.py
tests/risk/: test_risk_failure_scenarios.py
tests/trading/: test_trade_engine.py
(+644 files in other folders)
