[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PocketBot-Enterprise-X"
version = "0.1.0"
description = "Enterprise AI Trading Bot"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
]

ignore = []

[tool.mypy]
python_version = "3.13"

mypy_path = "src"

explicit_package_bases = true

namespace_packages = true

strict = true

warn_unused_configs = true

warn_return_any = true

warn_unused_ignores = true

warn_redundant_casts = true

warn_unreachable = true

show_error_codes = true

pretty = true

plugins = []

exclude = [
    "^tests/",
]

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]